@@ -1,3 +1,8 @@
+2012-06-06  Gabriel Dos Reis  <gdr@cse.tamu.edu>
+
+	* interp/io.boot (readePendingLines): Rename from readerLines.
+	Adjust callers.
+
 2012-06-05  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
 	* interp/io.boot (readerDeferLine): New.
